--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,31 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: lightblue;
+  background: url(./images/sunflower.png);
+  background-size: 25%;
 }
 
-.App-logo {
+.main {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.head {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .head {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.header {
+  background-size: 25%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +35,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.link {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 50px;
+  color: darkblue;
+  font-weight: bolder;
 }
 
 @keyframes App-logo-spin {
